--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,40 @@
-# Python Environment (Backend)
-/backend/venv/
-/backend/__pycache__/
-/backend/.env
-
-# Node Modules (Frontend - Akan dibuat nanti)
-/url-shortener-frontend/node_modules/
-/url-shortener-frontend/dist/
-
-# Kredensial & File Lokal
+# Environment Files (Sangat Penting!)
 .env
+*.env
+.env.*
+!.env.example
+
+# Frontend (Node.js/Vite)
+frontend/node_modules/
+frontend/dist/
+frontend/dist-ssr/
+frontend/*.local
+
+# Backend (Python/Flask)
+backend/venv/
+backend/.venv/
+backend/__pycache__/
+backend/.pytest_cache/
+backend/*.pyc
+backend/*.pyo
+backend/*.pyd
+backend/.env
+
+# Editor & System Files
+.vscode/
+.idea/
+.DS_Store
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+*.sw?
+node_modules/
+
+# Logs
+logs
+*.log
+npm-debug.log*
+yarn-debug.log*
+pnpm-debug.log*
+lerna-debug.log*
