--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -19,3 +19,6 @@ SQLAlchemy==2.0.44
 typing_extensions==4.15.0
 Werkzeug==3.1.4
 wrapt==2.0.1
+flask-cors==5.0.0
+pytest==8.3.4
+pytest-flask==1.3.0
