fixing kegagalan testing docker dan github action

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -21,7 +21,7 @@ jobs:
           cache: 'npm'
           cache-dependency-path: './frontend/package-lock.json'
       - run: npm ci
-      - run: npm run test -- --run --pool=threads --poolOptions.threads.singleThread
+      - run: npm run test -- --run
 
   backend-tests:
     runs-on: ubuntu-latest
